@@ -1,3 +1,7 @@
+2003-03-25  Lee Mallabone <mono-docs@fonicmonkey.net>
+
+	* en/Gtk/Calendar.xml: First draft docs, still need a little work.
+
 2003-03-24  Lee Mallabone <mono-docs@fonicmonkey.net>
 
 	* en/Gtk/HRuler.xml: 
